update availabilites
