# src/main/resources/swagger.yaml
@@ -144,9 +144,12 @@ paths:
             schema:
               $ref: '#/components/schemas/Attendee'
       responses:
-        204:
+        200:
           description: No content
-          content: { }
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Event'
         404:
           description: Not Found
           content:
@@ -206,6 +209,52 @@ paths:
               schema:
                 type: string
                 format: binary
+        404:
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        default:
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+  /v1/event/{event_id}/{attendee_email}:
+    put:
+      tags:
+        - event
+      summary: Update attendee availability
+      operationId: updateAttendeeAvailability
+      description: |- 
+        Updates the attendee availability for the given event. The attendee must be an attendee of 
+        the event. The provided availabilities override any existing ones.
+      parameters:
+        - name: event_id
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: attendee_email
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/AttendeeAvailability'
+      responses:
+        200:
+          description: No content
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Event'
         404:
           description: Not Found
           content:
